midas refactor - add UI performance collector info